# udemy_coding_guidelines_testing

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
udemy_python_guidelines/Section2_Coding_Guidelines/Docstring/: docstring_notes.md
udemy_python_guidelines/Section2_Coding_Guidelines/PEP8/: .flake8  .isort.cfg  .pylintrc  black.md  example.py  flake8_pylint.md  isort.md  isort_test.py  my_lib.py  notes.md  ruff.md
udemy_python_guidelines/Section2_Coding_Guidelines/PEP8/Configs/: pyproject.toml
udemy_python_guidelines/Section2_Coding_Guidelines/TypeAnnotations/: TypeAnnotations_notes.md  test.py  vector2d.py
udemy_python_guidelines/Section_1_Introduction_and_software/: readme_section1.md
