[tool.poetry]
name = "udemy-python-guidelines"
version = "0.1.0"
description = ""
authors = ["miloKmilo <campero189@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
build = "^1.2.2"
twine = "^5.1.1"
setuptools = "^74.1.2"
ipython = "^8.27.0"
ipykernel = "^6.29.5"
ruff = "^0.6.4"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.2"
mypy-extensions = "^1.0.0"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-benchmark = "^4.0.0"
codecov = "^2.1.13"
tox = "^4.18.1"
mkdocs = "^1.6.1"
mkdocstrings = "^0.26.1"
mkdocs-material = "^9.5.34"
mkdocstrings-python = "^1.11.1"
pygments = "^2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
